fix: markdown overflow

--- a/styles/Editor.module.css
+++ b/styles/Editor.module.css
@@ -20,6 +20,14 @@
   height: 100%;
   width: 100%;
 }
+.markdown {
+  overflow-x: auto;
+  overflow-wrap: break-word;
+  height: 100%;
+  overflow-y: scroll;
+  padding: 0.5rem;
+  grid-area: markdown;
+}
 
 .editor {
   grid-area: editor;
